deploy/k8s/prepare/manifests/sa.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: plantbook-test
---
apiVersion: v1
kind: Namespace
metadata:
  name: plantbook-prod
