deploy/k8s/prepare/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "prom.plantbook.icu"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-kube-prometheus-stack-prometheus
                port:
                  number: 9090
    - host: "grafana.plantbook.icu"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-grafana # OR your service name
                port:
                  number: 80 # grafana's service tcp/http port
    - host: "alert.plantbook.icu"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-kube-prometheus-stack-alertmanager
                port:
                  number: 9093
